website/versioned_docs/version-9.0.0/custom-scalar-types.md
---
id: version-9.0.0-custom-scalar-types
title: Scalar Type Support
original_id: custom-scalar-types
---

Scalar types in GraphQL represent the leaf types of your graphs like `String`, `Int`. Scalar values represent the  concrete data that is exposed..

## Core Scalar Types

Hot Chocolate comes with the following core scalar types that are also defined by the GraphQL specification:

| Type      | Description                                                 |
| --------- | ----------------------------------------------------------- |
| `Int`     | Signed 32-bit numeric non-fractional value                  |
| `Float`   | Double-precision fractional values as specified by IEEE 754 |
| `String`  | UTF-8 character sequences                                   |
| `Boolean` | Boolean type representing true or false                     |
| `ID`      | unique identifier                                           |

## Extended Scalar Types

Apart from the core scalars we have also added support for an extended set of scalar types:

| Type       | Description                                                 |
| ---------- | ----------------------------------------------------------- |
| `Byte`     |                                                             |
| `Short`    | Signed 16-bit numeric non-fractional value                  |
| `Long`     | Signed 64-bit numeric non-fractional value                  |
| `Decimal`  | .NET Floating Point Type                                    |
| `Url`      | Url                                                         |
| `DateTime` | ISO-8601 date time                                          |
| `Date`     | ISO-8601 date                                               |
| `Uuid`     | GUID                                                        |

## Using Scalars

We will automatically detect which of our scalars you are using and only integrate those. This keeps your schema definition small and simple.

For our built-in types we also have added automatic .NET type inference. This means that we will automatically translate for instance a `System.String` to a GraphQL `StringType`. You can override these default mappings by specifying these type bindings with the schema builder.

```csharp
SchemaBuilder.New()
    .BindClrType<string, MyCustomStringType>()
    ...
    .Create();
```

Furthermore, you can also bind scalar to arrays or type structures:

```csharp
SchemaBuilder.New()
    .BindClrType<byte[], ByteArrayType>()
    ...
    .Create();
```

Theses explict bindings will overwrite the internal default bindings.
Specifying such a binding explicitly can also be important when you have two types that bind to the same .NET Type like with `DateTimeType` and `DateType`.

```csharp
SchemaBuilder.New()
    .BindClrType<DateTime, DateTimeType>()
    ...
    .Create();
```

This will ensure that the type inference works predictable. As I said before in most cases you do not need to do anything since Hot Chocolate has default bindings configured.

## Custom Scalars

In order to implement a new scalar type extend the type:  `ScalarType`.

The following example shows you how a Custom String type could be implemented.

```csharp
public sealed class CustomStringType
    : ScalarType
{
    public CustomStringType()
        : base("CustomString")
    {
    }

    // define which .NET type represents your type
    public override Type ClrType { get; } = typeof(string);

    // define which literals this type can be parsed from.
    public override bool IsInstanceOfType(IValueNode literal)
    {
        if (literal == null)
        {
            throw new ArgumentNullException(nameof(literal));
        }

        return literal is StringValueNode
            || literal is NullValueNode;
    }

    // define how a literal is parsed to the native .NET type.
    public override object ParseLiteral(IValueNode literal)
    {
        if (literal == null)
        {
            throw new ArgumentNullException(nameof(literal));
        }

        if (literal is StringValueNode stringLiteral)
        {
            return stringLiteral.Value;
        }

        if (literal is NullValueNode)
        {
            return null;
        }

        throw new ArgumentException(
            "The string type can only parse string literals.",
            nameof(literal));
    }

    // define how a native type is parsed into a literal,
    public override IValueNode ParseValue(object value)
    {
        if (value == null)
        {
            return new NullValueNode(null);
        }

        if (value is string s)
        {
            return new StringValueNode(null, s, false);
        }

        if (value is char c)
        {
            return new StringValueNode(null, c.ToString(), false);
        }

        throw new ArgumentException(
            "The specified value has to be a string or char in order " +
            "to be parsed by the string type.");
    }

    // define the result serialization. A valid output must be of the following .NET types:
    // System.String, System.Char, System.Int16, System.Int32, System.Int64,
    // System.Float, System.Double, System.Decimal and System.Boolean
    public override object Serialize(object value)
    {
        if (value == null)
        {
            return null;
        }

        if (value is string s)
        {
            return s;
        }

        if(value is char c)
        {
            return c;
        }

        throw new ArgumentException(
            "The specified value cannot be serialized by the StringType.");
    }

    public override bool TryDeserialize(object serialized, out object value)
    {
        if (serialized is null)
        {
            value = null;
            return true;
        }

        if (serialized is string s)
        {
            value = s;
            return true;
        }

        value = null;
        return false;
    }
}
```
